// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should be rendered correctly 1`] = `
<div
  className="uui-progress_bar uui-progress_bar root size-12 container"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={20}
    className="bar bar"
    role="progressbar"
    style={
      Object {
        "width": "20%",
      }
    }
  />
  <div
    className="label label"
  >
    20%
  </div>
  <div
    className="label topLabel"
    style={
      Object {
        "clipPath": "inset(0 0 0 20%)",
      }
    }
  >
    20%
  </div>
</div>
`;

exports[`ProgressBar should be rendered correctly with custom label 1`] = `
<div
  className="uui-progress_bar uui-progress_bar root size-18 container"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={56}
    className="bar bar"
    role="progressbar"
    style={
      Object {
        "width": "56%",
      }
    }
  />
  <div
    className="label label"
  >
    5/10
  </div>
  <div
    className="label topLabel"
    style={
      Object {
        "clipPath": "inset(0 0 0 56%)",
      }
    }
  >
    5/10
  </div>
</div>
`;

exports[`ProgressBar should be rendered correctly with striped animation 1`] = `
<div
  className="uui-progress_bar uui-progress_bar root size-18 striped container"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={56}
    className="bar bar"
    role="progressbar"
    style={
      Object {
        "width": "56%",
      }
    }
  />
</div>
`;

exports[`ProgressBar should be rendered correctly without label 1`] = `
<div
  className="uui-progress_bar uui-progress_bar root size-18 container"
>
  <div
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={56}
    className="bar bar"
    role="progressbar"
    style={
      Object {
        "width": "56%",
      }
    }
  />
</div>
`;
